--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,10 @@
   <body>
 
 <div class="menu">
-	<div class="elmen"><a href="/">Авторизация</a></div>
-	<div class="elmen"><a href="/slovar">Словарь</a></div>
-    <div class="elmen"><a href="/test">Пройти тесты</a></div>
-    <div class="elmen"><a href="/tests/new">Создать тесты</a></div>
+    <div class="elmen"><%= link_to t("homepage"), root_path %></div>
+	<div class="elmen"><%= link_to t("slovar"), slovar_path %></div>
+    <div class="elmen"><%= link_to t("tests-Page"), tests_path %></div>
+    <div class="elmen"><%= link_to t("edit-test"), tests_new_path %></div>
 
 </div>
 
@@ -79,9 +79,6 @@
 
 
 </style>
-
-
-
     <%= yield %>
   </body>
 </html>
