--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -5,7 +5,7 @@
         <% if logged_in? %>
 
 <div class="menurazd" style="background: #8a00f3; ">
-Тесты
+<%= t 'test'%>
 </div>
 
 <div style="    float: left; width: 20%; padding-left: 5%; padding-top: 25px;">
